# prog1_TIS_23_24

./: README.md  copilot.cpp  main.cpp  run.sh
.github/workflows/: cmake-multi-platform.yml
02_eigenes/: CMakeLists.txt  a.out  config.h.in  helloworld  helloworld.cpp  helloworld2  helloworld2.cpp  temperatur.cpp  testworld  tuerme_von_hanoi.cpp
03_tag_01/: 01_inhalt.txt
03_tag_01/helloworld_vorlesung_c/: helloworld_vorlesung  helloworld_vorlesung.c  helloworld_vorlesung.c.orig  helloworld_vorlesung.s
03_tag_01/helloworld_vorlesung_c++/: datentypen_vorlesung  datentypen_vorlesung.cpp  helloworld_vorlesung  helloworld_vorlesung.cpp
03_tag_01/uebungen/: temperatur  temperatur.cpp  temperatur.cpp.orig
04_tag_02/: 01_inhalt.txt  int_vorlesung  int_vorlesung.cpp
05_tag_03/: 01_inhalt.txt  Aufgabe.txt  Aufgabe.txt:Zone.Identifier  main.cpp  main.cpp.orig
06_tag_04/: 01_inhalt  casten.cpp  class_bsp.cpp  config.h.in  file_io.cpp  main
06_tag_04/binaryfile/: main.cpp
06_tag_04/ctor/: class.cpp  struct.cpp
06_tag_04/ofstream/: main.cpp
06_tag_04/sprintf/: main.c
06_tag_04/stdio/: main.c
07_tag_05/: 01_inhalt.txt  CMakeLists.txt  aufgabe_hexviewer.txt  baseclass.cpp  baseclass.h  bla.txt  config.h  hello.h  main.cpp  prenameclass.h  v_bespiel
10_tag_08/: config.h
klausur_v/: main.cpp
